tests/baselines/reference/interfaceMayNotBeExtendedWitACall.errors.txt
==== tests/cases/compiler/interfaceMayNotBeExtendedWitACall.ts (2 errors) ====
    interface color {}
    
    interface blue extends color() { // error
                                ~
!!! error TS1005: ',' expected.
                                   ~
!!! error TS1005: '=>' expected.
    
    }
    